--- a/package.json
+++ b/package.json
@@ -4,12 +4,18 @@
     "description": "Build your own HTTP-Server challenge, from CodeCrafters",
     "main": "main.js",
     "scripts": {
-        "dev": "node app/main.js"
+        "dev": "bun app/main.js"
     },
     "keywords": [
         "build-your-own-x"
     ],
     "author": "",
     "license": "MIT",
-    "dependencies": {}
+    "dependencies": {
+        "@types/node": "^22.7.4"
+    },
+    "devDependencies": {
+        "esbuild": "^0.24.0",
+        "typescript": "^5.6.3"
+    }
 }
